Vertical align fixed

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,6 +3,10 @@ html {
     position: relative;
 }
 
+h1 {
+    margin: 0;
+}
+
 * {
     font-family: 'Open Sans', sans-serif;
 }
@@ -10,6 +14,11 @@ html {
 a, a:hover, a:active, a:focus {
     text-decoration: none;
     color: rgb(255, 255, 255);
+}
+
+.container-fluid {
+    height: 85vh;
+    background-color: gray;
 }
 
 .title {
@@ -75,7 +84,7 @@ a, a:hover, a:active, a:focus {
 header {
     background: linear-gradient(rgb(152, 251, 152),rgb(137, 225, 137));
     box-shadow: 0 2px 5px gray;
-    height: 60px;
+    height: 10vh;
     width: 100%;
 
     position: relative;
@@ -85,15 +94,19 @@ header {
     color: rgb(75, 123, 75);
     font-weight: 400;
 
-    margin: 10px 0 0 55px;
-    float: left;
+
+    left: 0;
+    margin-left: 55px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .menu {
     margin-right: 55px;
     position: absolute;
     right: 0;
-    top:50%;
+    top: 50%;
     transform: translateY(-50%);
 }
 .menu ul{
@@ -130,7 +143,7 @@ header {
 
 footer {
     background-color: rgb(36, 60, 36);
-    height: 40px;
+    height: 5vh;
     width: 100%;
 
     bottom: 0;
